resources/insights-ephemeral/3scale-dev/api-gateway-dev.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: apicast
  name: api-gateway-dev
spec:
  host: api-gateway-dev-3scale-dev.apps.c-rh-c-eph.8p0c.p1.openshiftapps.com
  port:
    targetPort: apigw-dev
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: apicast
    weight: 100
  wildcardPolicy: None
