resources/insights-ephemeral/3scale-dev/gateway-dev.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gateway
  name: gateway-dev
spec:
  host: gateway-dev.apps.c-rh-c-eph.8p0c.p1.openshiftapps.com
  port:
    targetPort: apigw-dev
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: gateway
    weight: 100
  wildcardPolicy: None
