resources/insights-ephemeral/3scale-dev/gateway-qaprodauth.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gateway
  name: gateway-ocm
spec:
  host: gateway-qaprodauth-ocm.apps.c-rh-c-eph.8p0c.p1.openshiftapps.com
  port:
    targetPort: apigw-ephemeral
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: gateway
    weight: 100
  wildcardPolicy: None
